Keep metadatakey list mutable after switch of seperator